--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-icons": "^5.4.0",
     "react-redux": "^9.2.0",
     "react-router": "^7.1.5",
-    "tailwindcss": "^4.0.3"
+    "tailwindcss": "^4.0.3",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
